fixing enable dark mode label

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,7 @@
     transform: rotate(360deg);
   }
 }
+
+label {
+  pointer-events: none;
+}
